--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,10 @@ nav{
   display: none;
 }
 
+.nav-links{
+  transition: all .3 ease;
+}
+
 .nav-links .list{
   display: flex;
   align-items: center;
@@ -67,6 +71,12 @@ nav{
 }
 .nav-social li{
   margin-left: 10px;
+  
+}
+@media screen and (min-width: 768px) {
+  .nav-links{
+    height: auto !important;
+  }
   
 }
 
